<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
<!--        <item-->
<!--                android:id="@+id/nav_logout"-->
<!--                android:icon="@drawable/ic_logout"-->
<!--                android:title="@string/menu_logout"/>-->
        <item
                android:id="@+id/nav_view_mv"
                android:icon="@drawable/ic_view"
                android:title="@string/menu_view_master"/>
                <item
                        android:id="@+id/nav_profile"
                        android:icon="@drawable/ic_user_profile"
                        android:title="@string/menu_user_profile"/>
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_sign_out"/>
<!--        <item-->
<!--                android:id="@+id/nav_manual_sync"-->
<!--                android:icon="@drawable/ic_sync"-->
<!--                android:title="@string/menu_manual_sync"/>-->

    </group>

 
</menu>
