<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".ui.studyform.info.InfoFragment"
>


    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtHeader"
            style="@style/txtHeaderTitle"
            android:text="@string/enter_study_form_info"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/dimen_15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>



    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="vertical"
                  app:layout_constraintEnd_toStartOf="@+id/txtHeader"
                  android:padding="@dimen/dimen_10"
                   android:layout_margin="@dimen/dimen_15"
                  app:layout_constraintTop_toBottomOf="@+id/txtHeader"
                  android:background="@drawable/card_background"
    >


        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:textColorHint="@color/mid_gray"
                android:hint="@string/title">

            <com.google.android.material.textfield.TextInputEditText
                    style="@style/edProfile"
                    android:inputType="textPersonName|textCapWords"
                    android:maxLines="2"
                    android:id="@+id/Info_titleTxt"
                    android:fontFamily="sans-serif"
                    android:layout_marginBottom="@dimen/dimen_10"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:textColorHint="@color/mid_gray"
                android:hint="@string/description">

            <com.google.android.material.textfield.TextInputEditText
                    style="@style/edProfile"
                    android:inputType="textMultiLine|textCapSentences"
                    android:gravity="start|top"
                    android:minLines="10"
                    android:maxLines="15"
                    android:imeOptions="actionDone"
                    android:fontFamily="sans-serif"
                    android:id="@+id/Info_titleDesc"
                    android:enabled="true"
            />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

       <Button
               style="@style/bottomBtn" android:layout_gravity="bottom"
               android:id="@+id/btn_continue"
               android:text="@string/continue_str"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               android:layout_marginTop="@dimen/dimen_10"

       />

</androidx.constraintlayout.widget.ConstraintLayout>