<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                       xmlns:app="http://schemas.android.com/apk/res-auto"
                                                       xmlns:tools="http://schemas.android.com/tools"
                                                       android:layout_width="match_parent"
                                                       android:layout_height="match_parent"
                                                       android:background="@color/colorAppBackground">



    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment_item_header"
            style="@style/txtHeaderTitle"
            android:text="@string/create_new_form_template"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
    />


    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/item_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dimen_10"
            android:background="@color/colorAppBackground"
            android:paddingStart="@dimen/dimen_15"
            android:paddingEnd="@dimen/dimen_15"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/fragment_item_bottomTxt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_item_header"
            tools:context=".ui.studyform.ItemFragment"
            tools:listitem="@layout/fragment_item"/>

    <TextView
            android:id="@+id/fragment_item_bottomTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_15"
            android:layout_marginEnd="@dimen/dimen_15"
            android:layout_marginBottom="@dimen/dimen_10"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/search_forms_tips"
            android:textColor="@color/black"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

    />

    <TextView
            android:id="@+id/form_emptyView"
            style="@style/txtLabelHeader_noMargin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_15"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/empty_import_forms_warning"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

    />

</androidx.constraintlayout.widget.ConstraintLayout>